--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "ES2017",
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
